--- a/.env.example
+++ b/.env.example
@@ -183,7 +183,8 @@ RPC_URL=https://api.mainnet-beta.solana.com
 HELIUS_API_KEY=
 
 # Telegram Configuration
-TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=7792761951:AAEWth607_TFKF42IKVRHbLFTAU-8h-tcPw
+
 
 # Together Configuration
 TOGETHER_API_KEY=
