--- a/packages/plugin-ethereum/package.json
+++ b/packages/plugin-ethereum/package.json
@@ -2,6 +2,8 @@
   "name": "@elizaos/plugin-ethereum",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "type": "module",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "ethers": "^5.7.2"
   },
@@ -23,6 +25,9 @@
     "test": "jest",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "build": "tsup --format esm --dts",
+    "dev": "tsup --format esm --dts --watch"
+
   }
 }
