--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "docker": "pnpm docker:build && pnpm docker:run && pnpm docker:bash",
         "test": "bash ./scripts/test.sh",
         "smokeTests": "bash ./scripts/smokeTests.sh",
-        "integrationTests": "bash ./scripts/integrationTests.sh"
+        "integrationTests": "bash ./scripts/integrationTests.sh",
+        "scrape": "node scripts/generatecharacter.js"
     },
     "devDependencies": {
         "@commitlint/cli": "18.6.1",
@@ -62,10 +63,12 @@
         "@coinbase/coinbase-sdk": "0.10.0",
         "@deepgram/sdk": "^3.9.0",
         "@injectivelabs/sdk-ts": "^1.14.33",
+        "@types/natural": "^5.1.5",
         "@vitest/eslint-plugin": "1.0.1",
         "amqplib": "0.10.5",
         "csv-parse": "5.6.0",
         "langdetect": "^0.2.1",
+        "natural": "^8.0.1",
         "ollama-ai-provider": "0.16.1",
         "optional": "0.1.4",
         "pnpm": "9.14.4",
