feat: initial commit

--- a/agent/package.json
+++ b/agent/package.json
@@ -78,6 +78,7 @@
         "@elizaos/plugin-near": "workspace:*",
         "@elizaos/plugin-zksync-era": "workspace:*",
         "@elizaos/plugin-twitter": "workspace:*",
+        "@elizaos/plugin-tweet-reply": "workspace:*",
         "@elizaos/plugin-primus": "workspace:*",
         "@elizaos/plugin-cronoszkevm": "workspace:*",
         "@elizaos/plugin-3d-generation": "workspace:*",
