--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,7 @@ TELEGRAM_BOT_TOKEN=
 # Twitter/X Configuration
 TWITTER_DRY_RUN=false
 TWITTER_USERNAME=       # Account username
-TWITTER_PASSWORD=@T            # Account password
+TWITTER_PASSWORD=            # Account password
 TWITTER_EMAIL=             # Account email
 TWITTER_2FA_SECRET=
 TWITTER_POLL_INTERVAL=120       # How often (in seconds) the bot should check for interactions
