--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ SUPABASE_ANON_KEY=
 ###############################
 
 # Discord Configuration
+LAST_PROCESSED_HEIGHT=
 DISCORD_APPLICATION_ID=
 DISCORD_API_TOKEN=              # Bot token
 DISCORD_VOICE_CHANNEL_ID=       # The ID of the voice channel the bot should join (optional)
